Variety of doc page improvements
* add links to “Scheduler” page in operator pages
* add descriptions of some non-canonical operators to pages of
functionally similar canonical operators

--- a/documentation/operators/distinct.html
+++ b/documentation/operators/distinct.html
@@ -92,7 +92,7 @@ id: distinct
      </figure>
      <p>
       <code>distinct</code> and <code>distinctUntilChanged</code> do not by default operate on any
-      particular scheduler.
+      particular <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
@@ -167,7 +167,7 @@ Sequence complete.</pre></div>
      </figure>
      <p>
       <code>distinct</code> and <code>distinctUntilChanged</code> do not by default operate on any
-      particular scheduler.
+      particular <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
