--- a/documentation/operators/elementat.html
+++ b/documentation/operators/elementat.html
@@ -77,7 +77,7 @@ id: elementAt
      </figure>
      <p>
       <code>elementAt</code> and <code>elementAtOrDefault</code> do not by default operate on any particular
-      scheduler.
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
@@ -115,7 +115,7 @@ id: elementAt
      </figure>
      <p>
       <code>elementAt</code> and <code>elementAtOrDefault</code> do not by default operate on any particular
-      scheduler.
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
