--- a/documentation/operators/first.html
+++ b/documentation/operators/first.html
@@ -165,7 +165,8 @@ id: first
      </figure>
      <p>
       <code>first</code>, <code>firstOrDefault</code>, <code>single</code>, <code>singleOrDefault</code>, and
-      <code>takeFirst</code> do not by default operate on any particular Scheduler.
+      <code>takeFirst</code> do not by default operate on any particular
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
      <h3>The <code>BlockingObservable</code> Methods</h3>
      <p>
@@ -401,7 +402,8 @@ Sequence complete.</pre></div>
      </figure>
      <p>
       <code>first</code>, <code>firstOrDefault</code>, <code>single</code>, <code>singleOrDefault</code>, and
-      <code>takeFirst</code> do not by default operate on any particular Scheduler.
+      <code>takeFirst</code> do not by default operate on any particular
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
      <h3>The <code>BlockingObservable</code> Methods</h3>
      <p>
