--- a/documentation/operators/ignoreelements.html
+++ b/documentation/operators/ignoreelements.html
@@ -57,7 +57,8 @@ id: ignoreElements
       </ul></figcaption>
      </figure>
      <p>
-      <code>ignoreElements</code> does not by default operate on any particular Scheduler.
+      <code>ignoreElements</code> does not by default operate on any particular
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
@@ -72,7 +73,8 @@ id: ignoreElements
       </ul></figcaption>
      </figure>
      <p>
-      <code>ignoreElements</code> does not by default operate on any particular Scheduler.
+      <code>ignoreElements</code> does not by default operate on any particular
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
