--- a/documentation/operators/last.html
+++ b/documentation/operators/last.html
@@ -101,7 +101,8 @@ id: last
       </ul></figcaption>
      </figure>
      <p>
-      <code>last</code> and <code>lastOrDefault</code> do not by default operate on any particular Scheduler.
+      <code>last</code> and <code>lastOrDefault</code> do not by default operate on any particular
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
      <h3>The <code>BlockingObservable</code> Methods</h3>
      <p>
@@ -236,7 +237,8 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <p>
-      <code>last</code> and <code>lastOrDefault</code> do not by default operate on any particular Scheduler.
+      <code>last</code> and <code>lastOrDefault</code> do not by default operate on any particular
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
      <h3>The <code>BlockingObservable</code> Methods</h3>
      <p>
