--- a/documentation/operators/observeon.html
+++ b/documentation/operators/observeon.html
@@ -16,10 +16,10 @@ id: observeOn
 <figure>
  <img src="images/observeOn.c.png" width="640" alt="ObserveOn" />
  <figcaption><p>
-  Many implementations of ReactiveX use &ldquo;<code>Scheduler</code>s&rdquo; to govern an Observable&#8217;s
-  transitions between threads in a multi-threaded environment. You can instruct an Observable to send its
-  notifications to observers on a particular Scheduler by means of the <span class="operator">ObserveOn</span>
-  operator.
+  Many implementations of ReactiveX use <a href="../scheduler.html">&ldquo;<code>Scheduler</code>s&rdquo;</a>
+  to govern an Observable&#8217;s transitions between threads in a multi-threaded environment. You can instruct
+  an Observable to send its notifications to observers on a particular Scheduler by means of the
+  <span class="operator">ObserveOn</span> operator.
  </p></figcaption>
 </figure>
  <p>
