--- a/documentation/operators/operators.html
+++ b/documentation/operators/operators.html
@@ -266,7 +266,7 @@
  <dt>I want to convert the entire sequence of items emitted by an Observable into some other data structure</dt>
   <dd><a href="to.html">To</a></dd>
 
- <dt>I want an operator to operate on a particular Scheduler</dt>
+ <dt>I want an operator to operate on a particular <a href="../scheduler.html">Scheduler</a></dt>
   <dd><a href="subscribeon.html">SubscribeOn</a></dd>
   <dd class="sub"><dl>
    <dt>when it notifies observers</dt>
