--- a/documentation/operators/replay.html
+++ b/documentation/operators/replay.html
@@ -173,7 +173,8 @@ id: replay
           subsequent observers</dd>
       <dt><code>window</code></dt><dd>the age, in milliseconds, at which items in this buffer may be
           discarded without being emitted to subsequent observers</dd>
-      <dt><code>scheduler</code></dt><dd>the Scheduler on which this operator will operate</dd></dt>
+      <dt><code>scheduler</code></dt><dd>the <a href="../scheduler.html">Scheduler</a> on which this operator
+          will operate</dd></dt>
      </dl>
      <h4>Sample Code</h4>
      <div class="code javascript"><pre>
@@ -225,7 +226,8 @@ Completed</pre></div>
           subsequent observers</dd>
       <dt><code>window</code></dt><dd>the age, in milliseconds, at which items in this buffer may be
           discarded without being emitted to subsequent observers</dd>
-      <dt><code>scheduler</code></dt><dd>the Scheduler on which this operator will operate</dd></dt>
+      <dt><code>scheduler</code></dt><dd>the <a href="../scheduler.html">Scheduler</a> on which this operator
+          will operate</dd></dt>
      </dl>
     </p>
     <h4>Sample Code</h4>
