--- a/documentation/operators/scan.html
+++ b/documentation/operators/scan.html
@@ -93,7 +93,7 @@ Sequence complete</pre></div>
       </ul></figcaption>
      </figure>
      <p>
-      This operator does not by default operate on any particular scheduler
+      This operator does not by default operate on any particular <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
@@ -153,7 +153,7 @@ Sequence complete.</pre></div>
       </ul></figcaption>
      </figure>
      <p>
-      This operator does not by default operate on any particular scheduler
+      This operator does not by default operate on any particular <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
