--- a/documentation/operators/subscribeon.html
+++ b/documentation/operators/subscribeon.html
@@ -16,9 +16,10 @@ id: subscribeOn
 <figure>
  <img src="images/subscribeOn.c.png" width="640" alt="SubscribeOn" />
  <figcaption><p>
-  Many implementations of ReactiveX use &ldquo;<code>Scheduler</code>s&rdquo; to govern an Observable&#8217;s
-  transitions between threads in a multi-threaded environment. You can instruct an Observable to operate on a
-  particular Scheduler by means of the <span class="operator">SubscribeOn</span> operator.
+  Many implementations of ReactiveX use <a href="../scheduler.html">&ldquo;<code>Scheduler</code>s&rdquo;</a>
+  to govern an Observable&#8217;s transitions between threads in a multi-threaded environment. You can instruct
+  an Observable to operate on a particular Scheduler by means of the <span class="operator">SubscribeOn</span>
+  operator.
  </p></figcaption>
 </figure>
  <p>
