--- a/documentation/operators/timer.html
+++ b/documentation/operators/timer.html
@@ -72,8 +72,9 @@ id: timer
      </ul></figcaption>
     </figure>
     <p>
-     <code>timer</code> by default operates on the <code>computation</code> scheduler, or you can
-     override this by passing in a Scheduler as a final parameter.
+     <code>timer</code> by default operates on the <code>computation</code>
+     <a href="../scheduler.html">Scheduler</a>, or you can override this by passing in a Scheduler as a final
+     parameter.
     </p>
   {% endlang_operator %}
 
@@ -104,8 +105,9 @@ id: timer
      </ul></figcaption>
     </figure>
     <p>
-     <code>timer</code> by default operates on the <code>computation</code> scheduler, or you can
-     override this by passing in a Scheduler as a final parameter.
+     <code>timer</code> by default operates on the <code>computation</code>
+     <a href="../scheduler.html">Scheduler</a>, or you can override this by passing in a Scheduler as a final
+     parameter.
     </p>
   {% endlang_operator %}
 
@@ -153,8 +155,9 @@ Completed</pre></div>
      </figcaption>
     </figure>
     <p>
-     <code>timer</code> by default operates on the <code>timeout</code> scheduler, or you can
-     override this by passing in a Scheduler as a final parameter.
+     <code>timer</code> by default operates on the <code>timeout</code>
+     <a href="../scheduler.html">Scheduler</a>, or you can override this by passing in a Scheduler as a final
+     parameter.
     </p><p>
      <code>timer</code> is found in each of the following distributions:
     </p>
