--- a/documentation/operators/timestamp.html
+++ b/documentation/operators/timestamp.html
@@ -66,7 +66,8 @@ Timestamped(timestampMillis = 1369252582823, value = 800000)
 Timestamped(timestampMillis = 1369252582864, value = 1000000)
 Sequence complete</pre></div>
       <p>
-       <code>timestamp</code> by default operates on the <code>immediate</code> Scheduler but also has a variant
+       <code>timestamp</code> by default operates on the <code>immediate</code>
+       <a href="../scheduler.html">Scheduler</a> but also has a variant
        that allows you to choose the Scheduler by passing it in as a parameter.
       </p>
       <ul>
@@ -84,7 +85,8 @@ Sequence complete</pre></div>
        emits objects of type <code>Timestamped&lt;<i>T</i>&gt;</code>, where each such object is stamped with
        the time at which it was originally emitted.
       </p><p>
-       <code>timestamp</code> by default operates on the <code>immediate</code> Scheduler but also has a variant
+       <code>timestamp</code> by default operates on the <code>immediate</code>
+       <a href="../scheduler.html">Scheduler</a> but also has a variant
        that allows you to choose the Scheduler by passing it in as a parameter.
       </p>
       <ul>
@@ -121,7 +123,8 @@ Next: 3:1378690779317
 Next: 4:1378690780319
 Completed</pre></div>
       <p>
-       <code>timestamp</code> by default operates on the <code>timeout</code> Scheduler, but also has a
+       <code>timestamp</code> by default operates on the <code>timeout</code>
+       <a href="../scheduler.html">Scheduler</a>, but also has a
        variant that allows you to specify the Scheduler by passing it in as a parameter.
       </p><p>
        <code>timestamp</code> is found in each of the following distributions:
