--- a/documentation/operators/zip.html
+++ b/documentation/operators/zip.html
@@ -104,7 +104,7 @@ Sequence complete</pre></div>
      </figure>
      <p>
       <code>zip</code> and <code>zipWith</code> do not by default operate on any particular
-      scheduler.
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
@@ -143,7 +143,7 @@ Sequence complete</pre></div>
      </figure>
      <p>
       <code>zip</code> and <code>zipWith</code> do not by default operate on any particular
-      scheduler.
+      <a href="../scheduler.html">Scheduler</a>.
      </p>
   {% endlang_operator %}
 
