--- a/documentation/operators/map.html
+++ b/documentation/operators/map.html
@@ -31,7 +31,7 @@ id: map
    <h2>Language-Specific Information:</h2>
 <div class="panel-group operators-by-language" id="accordion" role="tablist" aria-multiselectable="true">
 
-  {% lang_operator RxClojure map-indexed %}
+  {% lang_operator RxClojure keep keep-indexed map map-indexed %}
      <p>
       <span style="color:#ff0000">TBD</span>
      </p>
